--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,7 +1,8 @@
 [versions]
-agp = "8.10.1"
+agp = "8.11.0"
+blurview = "version-2.0.6"
 gson = "2.13.1"
-kotlin = "2.1.20"
+kotlin = "2.2.0"
 coreKtx = "1.16.0"
 junit = "4.13.2"
 junitVersion = "1.2.1"
@@ -11,13 +12,19 @@ material = "1.12.0"
 activity = "1.10.1"
 constraintlayout = "2.2.1"
 okhttp = "4.12.0"
-roomRuntime = "2.7.1"
+roomRuntime = "2.7.2"
+roundedimageview = "2.3.0"
+imagepicker = "2.1"
+hawk = "2.0.1"
+balloon = "1.6.12"
+timeago = "4.1.0"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
 androidx-room-compiler = { module = "androidx.room:room-compiler", version.ref = "roomRuntime" }
 androidx-room-ktx = { module = "androidx.room:room-ktx", version.ref = "roomRuntime" }
 androidx-room-runtime = { module = "androidx.room:room-runtime", version.ref = "roomRuntime" }
+blurview = { module = "com.github.Dimezis:BlurView", version.ref = "blurview" }
 gson = { module = "com.google.code.gson:gson", version.ref = "gson" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
 androidx-junit = { group = "androidx.test.ext", name = "junit", version.ref = "junitVersion" }
@@ -27,6 +34,11 @@ material = { group = "com.google.android.material", name = "material", version.r
 androidx-activity = { group = "androidx.activity", name = "activity", version.ref = "activity" }
 androidx-constraintlayout = { group = "androidx.constraintlayout", name = "constraintlayout", version.ref = "constraintlayout" }
 okhttp = { module = "com.squareup.okhttp3:okhttp", version.ref = "okhttp" }
+roundedimageview = { group = "com.makeramen", name = "roundedimageview", version.ref = "roundedimageview" }
+imagepicker = { group = "com.github.dhaval2404", name = "imagepicker", version.ref = "imagepicker" }
+hawk = { group = "com.orhanobut", name = "hawk", version.ref = "hawk" }
+balloon = { group = "com.github.skydoves", name = "balloon", version.ref = "balloon" }
+timeago = { group = "com.github.marlonlom", name = "timeago", version.ref = "timeago" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
