--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,5 +1,5 @@
 [versions]
-agp = "8.11.0"
+agp = "8.12.0"
 blurview = "version-2.0.6"
 gson = "2.13.1"
 kotlin = "2.2.0"
@@ -18,6 +18,7 @@ imagepicker = "2.1"
 hawk = "2.0.1"
 balloon = "1.6.12"
 timeago = "4.1.0"
+swiperefreshlayout = "1.1.0"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -39,6 +40,7 @@ imagepicker = { group = "com.github.dhaval2404", name = "imagepicker", version.r
 hawk = { group = "com.orhanobut", name = "hawk", version.ref = "hawk" }
 balloon = { group = "com.github.skydoves", name = "balloon", version.ref = "balloon" }
 timeago = { group = "com.github.marlonlom", name = "timeago", version.ref = "timeago" }
+androidx-swiperefreshlayout = { group = "androidx.swiperefreshlayout", name = "swiperefreshlayout", version.ref = "swiperefreshlayout" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
