--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,12 +1,12 @@
 [versions]
-agp = "8.12.0"
+agp = "8.13.0"
 blurview = "version-2.0.6"
 gson = "2.13.1"
-kotlin = "2.2.0"
-coreKtx = "1.16.0"
+kotlin = "2.2.10"
+coreKtx = "1.17.0"
 junit = "4.13.2"
-junitVersion = "1.2.1"
-espressoCore = "3.6.1"
+junitVersion = "1.3.0"
+espressoCore = "3.7.0"
 appcompat = "1.7.1"
 material = "1.12.0"
 activity = "1.10.1"
@@ -16,9 +16,10 @@ roomRuntime = "2.7.2"
 roundedimageview = "2.3.0"
 imagepicker = "2.1"
 hawk = "2.0.1"
-balloon = "1.6.12"
+balloon = "1.6.13"
 timeago = "4.1.0"
 swiperefreshlayout = "1.1.0"
+swipelayout = "1.3.1"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -41,6 +42,7 @@ hawk = { group = "com.orhanobut", name = "hawk", version.ref = "hawk" }
 balloon = { group = "com.github.skydoves", name = "balloon", version.ref = "balloon" }
 timeago = { group = "com.github.marlonlom", name = "timeago", version.ref = "timeago" }
 androidx-swiperefreshlayout = { group = "androidx.swiperefreshlayout", name = "swiperefreshlayout", version.ref = "swiperefreshlayout" }
+swipelayout = { group = "com.github.zerobranch", name = "SwipeLayout", version.ref = "swipelayout" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
